<resources>
    <string name="app_name">WifiSpy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tags_fragment_title">Tags</string>
    <string name="access_points_fragment_title">Access Points</string>
    <string name="tags_default_remove">Default tag cannot be removed</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="dialog_select_tags_title">Select one or more Tags</string>
    <string name="access_points_selected"> access points selected</string>
    <string name="tags_selected"> tags selected</string>
    <string name="edit_tag_name">Edit Tag Name</string>
    <string name="we_are_scanning">WifiSpy is scanning...</string>
    <string name="click_to_view">Click to view</string>
    <string name="notification_channel_scanning">Wifi Scanning</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tag">Tag</string>
    <string name="access_points">Access Points</string>
    <string name="tags_list">Tags List</string>
    <string name="view_map">View Map</string>
</resources>
