<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/accessp_points"
            android:checked="true"
            android:icon="@mipmap/ic_wifi"
            android:title="@string/access_points"/>
        <item
            android:id="@+id/tags"
            android:checked="true"
            android:icon="@mipmap/ic_tags"
            android:title="@string/tags_list"/>
        <item
            android:id="@+id/map"
            android:icon="@mipmap/ic_places"
            android:title="@string/view_map"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/about"
            android:icon="@mipmap/ic_about"
            android:title="@string/about"/>
    </group>

</menu>
